--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="./website/kkewash/index.html">KKEwash</a></li>
         <li><a href="./website/Mealprep/index.html">Mealprep</a></li>
         <li><a href="./website/g2-website-static/index.html">G2</a></li>
+        <li><a href="./website/marvel-website/index.html">Marvel</a></li>
       </ul>
 
       <ul>
