--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         </div>
         <div class="links-container">
           <ul>
-            <h2 class="link-heading">Websites</h2>
-            <li><a href="./website/Axxence-website/index.html">axxence</a></li>
+            <h2 class="link-heading">
+              Websit<span class="pos-rel"
+                >es<span class="red-head-bar"></span
+              ></span>
+            </h2>
+            <li><a href="./website/Axxence-website/index.html">Axxence</a></li>
             <li><a href="./website/kkewash/index.html">KKEwash</a></li>
             <li><a href="./website/Mealprep/index.html">Mealprep</a></li>
             <li><a href="./website/g2-website-static/index.html">G2</a></li>
@@ -27,7 +31,11 @@
           </ul>
           <div class="separator"></div>
           <ul>
-            <h2 class="link-heading">Web UI</h2>
+            <h2 class="link-heading">
+              Web UI Desig<span class="pos-rel"
+                >ns<span class="red-head-bar"></span
+              ></span>
+            </h2>
             <li><a href="./web ui/web-ui-10-pakaton/index.html">Pakaton</a></li>
             <li>
               <a href="./web ui/web-ui-11-man-programmer/index.html"
@@ -39,7 +47,11 @@
                 >Virtual Adventure</a
               >
             </li>
-            <li><a href="./web ui/web-ui-12-olive-oil/">OliveOil</a></li>
+            <li>
+              <a href="./web ui/web-ui-12-olive-oil/"
+                >OliveOil - Product Page</a
+              >
+            </li>
             <li>
               <a href="./web ui/web-ui-13-furniture-store/">Furniture Store</a>
             </li>
