--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fron-End Assignments</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="#" type="image/x-icon" />
+    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" />
   </head>
   <body>
     <div class="main">
@@ -27,7 +27,7 @@
             <li><a href="./website/kkewash/index.html">KKEwash</a></li>
             <li><a href="./website/Mealprep/index.html">Mealprep</a></li>
             <li><a href="./website/g2-website-static/index.html">G2</a></li>
-            <li><a href="./website/marvel-website/index.html">Marvel</a></li>
+            <li><a href="./website/marvel-website/index.html">MARVEL</a></li>
           </ul>
           <div class="separator"></div>
           <ul>
