--- a/website/g2-website-static/index.html
+++ b/website/g2-website-static/index.html
@@ -111,6 +111,24 @@
             <a href="#">Join or Sign In</a>
           </li>
         </ul>
+        <div class="menu-btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            contain="paint"
+            buffered-rendering="static"
+            viewBox="0 0 512 512"
+            class="medium topnav__hamburger icon-hamburger nessy-only"
+            aria-labelledby="icon-label-72a2a73a36038506a894f650a04e9d73"
+            role="img"
+          >
+            <title id="icon-label-72a2a73a36038506a894f650a04e9d73">
+              Expand/Collapse
+            </title>
+            <path
+              d="M32 96h448v96H32zm0 128h448v96H32zm0 128h448v96H32z"
+            ></path>
+          </svg>
+        </div>
       </nav>
 
       <!-- HERO -->
